# mrGSplat

./: .gitignore  CMakeLists.txt  README.md
archive/: ConvertPoses.py  Meshroom2ColmapSfmConvertions.py  PrepareFolderForGSplat.py
archive/pipelines/: clean_plate.mg  multiscale_optim.mg
gsplatInterface/: argparse_dataclass.py  avImage.py  cameraPosesParser.py  cleanSplats.py  common.py  initializeSplats.py  trainer.py  utils.py  viewer.py
gsplatInterface/datasets/: mesh.py
gsplatInterface/datasets/sfm/: __init__.py  (+6 more)
meshroom/: gaussianSplattingPhotogrammetry.mg
meshroom/mrGSplat/: ConvertGSplatModel.py  GaussianSplattingOptim.py  GaussianSplattingRender.py  MeshViz.py
nodes/commandLineNodes/: CleanSplats.py  ConvertGSplatModel.py  ExportPoses.py  GaussianSplattingOptim.py  GaussianSplattingRender.py  ImportAlembicCamera.py  InitializeSplats.py  MeshSample.py  MeshViz.py  RandomizePoses.py  SfmPoseDistance.py
nodes/nodes/: ExtractPosesFromSfm.py  ImageCompo.py  PrepareImagesForGSplat.py
nodes/optim/: GaussianSplattingOptim.py  GaussianSplattingRender.py  InitializeSplats.py
nodes/utils/: ConvertPoses.py  ExportPoses.py  ImageCompo.py  MeshSample.py  MeshViz.py  Meshroom2ColmapSfmConvertions.py  PrepareAlembicCamera.py  PrepareFolderForGSplat.py  PrepareImagesForGSplat.py  meshSample.py  meshviz.py
pipelines/: GaussianSplattingCameraTracking.mg  GaussianSplattingPhotogAndCameraTracking.mg  GaussianSplattingPhotoggrametryAndCameraTracking.mg  GaussianSplattingWithCameraTracking.mg  clean_plate.mg  multiscale_optim.mg
scripts/: convertGSplatModel.py  importAlembicCamera.py  meshviz.py
(+11 files in other folders)
